1.2 Fix - admin product search box covered by footer text Enhancment - Hide SKU on front-end (css)

--- a/resources/assets/styles/layouts/_wc-single-product.scss
+++ b/resources/assets/styles/layouts/_wc-single-product.scss
@@ -104,6 +104,10 @@
           color: $dark-gray;
         }
       }
+
+      .sku_wrapper {
+        display: none;
+      }
     }
 
     .woocommerce-tabs {
